<resources>
    <string name="app_name">Biodiversity Warriors</string>
    <string name="add_jurnal">Add POST</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="registrasi">REGISTRASION !</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now !.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--array to spiner -->
    <string-array name="pilihanKat">
        <item>-Type-</item>
        <item>Jurnal</item>
        <item>Foto</item>
        <item>Video</item>
    </string-array>

    <!--array to spiner -->
    <string-array name="pilihanSubKat">
        <item>-Kategori-</item>
        <item>Mamalia</item>
        <item>Reptil</item>
        <item>Burung</item>
        <item>Amfibi</item>
        <item>Ikan</item>
        <item>Jamur</item>
        <item>Tumbuhan</item>
        <item>Serangga</item>
        <item>Pangan</item>
        <item>Energi</item>
        <item>Kesehatan</item>
        <item>Air</item>
        <item>Lain-lain</item>
    </string-array>

    <!--array to spiner -->
    <string-array name="pilihanJenisKelamin">
        <item>Jenis Kelamin</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
