<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D3e50"
    tools:context="pptik.project.biodiversitywarriors.RegisterActivity">



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="60dip"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/namadpn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_rounded"
            android:hint="Nama Depan"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/bg_login"
            android:textColorHint="@color/bg_login" />

        <EditText
            android:id="@+id/namaBelakang"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_rounded"
            android:hint="Nama Belakang"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/bg_login"
            android:textColorHint="@color/bg_login" />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_rounded"
            android:hint="@string/hint_name"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/bg_login"
            android:textColorHint="@color/bg_login" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_rounded"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/bg_login"
            android:textColorHint="@color/bg_login" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_rounded"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/bg_login"
            android:textColorHint="@color/bg_login" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/birthday"
            android:hint="Tgl Lahir"
            android:background="@drawable/btn_rounded"
            android:padding="10dp"
            android:singleLine="true"
            android:editable="false"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"/>
        <Spinner
            android:id="@+id/jenisKelamin"
            android:layout_width="fill_parent"
            android:entries="@array/pilihanJenisKelamin"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_submit_rounded"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:layout_weight="0.46"
            android:padding="15dp"
            android:layout_marginTop="10dp"/>

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/bg_login"
            android:textSize="15dp" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
